==> apache/nuttx/arch/arm/src/lpc54xx/lpc54_serial.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/serial/serial.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "chip.h"
#include "lpc54_config.h"
#include "hardware/lpc54_usart.h"
#include "lpc54_clockconfig.h"
#include "lpc54_lowputc.h"
#include "lpc54_serial.h"
#include <arch/board/board.h>
#    define CONSOLE_DEV         g_uart0port /* USART0 is console */
#    define TTYS0_DEV           g_uart0port /* USART0 is ttyS0 */
#    define USART0_ASSIGNED     1
#    define CONSOLE_DEV         g_uart1port /* USART1 is console */
#    define TTYS0_DEV           g_uart1port /* USART1 is ttyS0 */
#    define USART1_ASSIGNED     1
#    define CONSOLE_DEV         g_uart2port /* USART2 is console */
#    define TTYS0_DEV           g_uart2port /* USART2 is ttyS0 */
#    define USART2_ASSIGNED     1
#    define CONSOLE_DEV         g_uart3port /* USART3 is console */
#    define TTYS0_DEV           g_uart3port /* USART3 is ttyS0 */
#    define USART3_ASSIGNED     1
#    define CONSOLE_DEV         g_uart4port /* USART4 is console */
#    define TTYS0_DEV           g_uart4port /* USART4 is ttyS0 */
#    define USART4_ASSIGNED     1
#    define CONSOLE_DEV         g_uart5port /* USART5 is console */
#    define TTYS5_DEV           g_uart5port /* USART5 is ttyS0 */

static inline uint32_t lpc54_serialin(struct lpc54_dev_s *priv,
                                      unsigned int offset)
{
  return getreg32(priv->uartbase + offset);
}

static inline void lpc54_serialout(struct lpc54_dev_s *priv,
                                   unsigned int offset, uint32_t value)
{
  putreg32(value, priv->uartbase + offset);
}

static inline void lpc54_modifyreg(struct lpc54_dev_s *priv,
                                   unsigned int offset, uint32_t setbits,
                                   uint32_t clrbits)
{
  irqstate_t flags;
  uintptr_t regaddr = priv->uartbase + offset;
  uint32_t regval;

  flags   = enter_critical_section();

  regval  = getreg32(regaddr);
  regval &= ~clrbits;
  regval |= setbits;
  putreg32(regval, regaddr);

  leave_critical_section(flags);
}

static void lpc54_shutdown(struct uart_dev_s *dev)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;

  /* Disable interrupts */

  lpc54_fifoint_disableall(priv, NULL);

  /* Reset hardware and disable Rx and Tx */

  lpc54_usart_disable(priv->uartbase);
}

static int lpc54_attach(struct uart_dev_s *dev)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;
  int ret;

  /* Attach and enable the IRQ(s).  The interrupts are (probably) still
   * disabled in the C2 register.
   */

  ret = irq_attach(priv->irq, lpc54_interrupt, dev);
  if (ret == OK)
    {
      up_enable_irq(priv->irq);
    }

  return ret;
}

static void lpc54_detach(struct uart_dev_s *dev)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;

  /* Disable interrupts */

  lpc54_fifoint_disableall(priv, NULL);
  up_disable_irq(priv->irq);

  /* Detach from the interrupt(s) */

  irq_detach(priv->irq);
}

static int lpc54_interrupt(int irq, void *context, void *arg)
{
  struct uart_dev_s *dev = (struct uart_dev_s *)arg;
  struct lpc54_dev_s *priv;
  int passes;
  uint32_t regval;
  bool handled;

  DEBUGASSERT(dev != NULL && dev->priv != NULL);
  priv = (struct lpc54_dev_s *)dev->priv;

  /* Loop until there are no characters to be transferred or,
   * until we have been looping for a long time.
   */

  handled = true;
  for (passes = 0; passes < 256 && handled; passes++)
    {
      handled = false;

      /* Read and clear FIFO interrupt status */

      regval = lpc54_serialin(priv, LPC54_USART_FIFOINTSTAT_OFFSET);
      lpc54_serialout(priv, LPC54_USART_FIFOINTSTAT_OFFSET, regval);

      /* Handle incoming, receive bytes.
       * Check if the received FIFO is not empty.
       */

      if ((regval & USART_FIFOINT_RXLVL) != 0)
        {
          /* Process incoming bytes */

          uart_recvchars(dev);
          handled = true;
        }

      /* Handle outgoing, transmit bytes.
       * Check if the received FIFO is not full.
       */

      if ((regval & USART_FIFOINT_TXLVL) != 0)
        {
          /* Process outgoing bytes */

          uart_xmitchars(dev);
          handled = true;
        }

#ifdef CONFIG_DEBUG_FEATURES
      /* Check for error conditions */

      if ((regval & CCR_ERROR_EVENTS) != 0)
        {
          /* And now do... what?  Should we reset FIFOs on a FIFO error? */
#warning Missing logic
        }
#endif
    }

  return OK;
}

static int lpc54_ioctl(struct file *filep, int cmd, unsigned long arg)
{
#if 0 /* Reserved for future growth */
  struct inode      *inode;
  struct uart_dev_s *dev;
  struct lpc54_dev_s   *priv;
  int                   ret = OK;

  DEBUGASSERT(filep, filep->f_inode);
  inode = filep->f_inode;
  dev   = inode->i_private;

  DEBUGASSERT(dev, dev->priv);
  priv = (struct lpc54_dev_s *)dev->priv;

  switch (cmd)
    {
    case xxx: /* Add commands here */
      break;

    default:
      ret = -ENOTTY;
      break;
    }

  return ret;
#else
  return -ENOTTY;
#endif
}

static int lpc54_receive(struct uart_dev_s *dev, unsigned int *status)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;
  uint32_t fiford;

  /* Get input data along with receiver control information */

  fiford = lpc54_serialin(priv, LPC54_USART_FIFORD_OFFSET);

  /* Return receiver control information */

  if (status)
    {
      *status = fiford && ~USART_FIFORD_RXDATA_MASK;
    }

  /* Then return the actual received data. */

  return fiford & USART_FIFORD_RXDATA_MASK;
}

static void lpc54_rxint(struct uart_dev_s *dev, bool enable)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;

  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      /* Receive an interrupt when there is anything in the Rx data register
       * (or an Rx timeout occurs).
       */

      lpc54_fifoint_enable(priv, CCR_RX_EVENTS);
#endif
    }
  else
    {
      lpc54_fifoint_disable(priv, CCR_RX_EVENTS);
    }
}

static bool lpc54_rxavailable(struct uart_dev_s *dev)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;
  uint32_t regval;

  /* Return true if the receive buffer/fifo is not "empty." */

  regval = lpc54_serialin(priv, LPC54_USART_FIFOSTAT_OFFSET);
  return ((regval & USART_FIFOSTAT_RXNOTEMPTY) != 0);
}

static void lpc54_send(struct uart_dev_s *dev, int ch)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;
  lpc54_serialout(priv, LPC54_USART_FIFOWR_OFFSET, (uint32_t)ch);
}

static void lpc54_txint(struct uart_dev_s *dev, bool enable)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;
  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      irqstate_t flags;

      /* Enable the TX interrupt */

      flags = enter_critical_section();
      lpc54_fifoint_enable(priv, CCR_TX_EVENTS);

      /* Fake a TX interrupt here by just calling uart_xmitchars() with
       * interrupts disabled (note this may recurse).
       */

      uart_xmitchars(dev);
      leave_critical_section(flags);
#endif
    }
  else
    {
      /* Disable the TX interrupt */

      lpc54_fifoint_disable(priv, CCR_TX_EVENTS);
    }
}

static bool lpc54_txready(struct uart_dev_s *dev)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;
  uint32_t regval;

  /* Return true if the transmit FIFO is "not full." */

  regval = lpc54_serialin(priv, LPC54_USART_FIFOSTAT_OFFSET);
  return ((regval & USART_FIFOSTAT_TXNOTFULL) != 0);
}

static bool lpc54_txempty(struct uart_dev_s *dev)
{
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)dev->priv;
  uint32_t regval;

  /* Return true if the transmit FIFO is "empty." */

  regval = lpc54_serialin(priv, LPC54_USART_FIFOSTAT_OFFSET);
  return ((regval & USART_FIFOSTAT_TXEMPTY) != 0);
}

void lpc54_earlyserialinit(void)
{
  /* Disable interrupts from all USARTS. */

  lpc54_fifoint_disableall(TTYS0_DEV.priv, NULL);
#ifdef TTYS1_DEV
  lpc54_fifoint_disableall(TTYS1_DEV.priv, NULL);
#endif
#ifdef TTYS2_DEV
  lpc54_fifoint_disableall(TTYS2_DEV.priv, NULL);
#endif
#ifdef TTYS3_DEV
  lpc54_fifoint_disableall(TTYS3_DEV.priv, NULL);
#endif
#ifdef TTYS4_DEV
  lpc54_fifoint_disableall(TTYS4_DEV.priv, NULL);
#endif
#ifdef TTYS5_DEV
  lpc54_fifoint_disableall(TTYS5_DEV.priv, NULL);
#endif
#ifdef TTYS6_DEV
  lpc54_fifoint_disableall(TTYS6_DEV.priv, NULL);
#endif
#ifdef TTYS7_DEV
  lpc54_fifoint_disableall(TTYS7_DEV.priv, NULL);
#endif
#ifdef TTYS8_DEV
  lpc54_fifoint_disableall(TTYS8_DEV.priv, NULL);
#endif
#ifdef TTYS9_DEV
  lpc54_fifoint_disableall(TTYS9_DEV.priv, NULL);
#endif

  /* Configuration whichever one is the console. */

#ifdef HAVE_USART_CONSOLE
  CONSOLE_DEV.isconsole = true;
  lpc54_setup(&CONSOLE_DEV);
#endif
}

int up_putc(int ch)
{
#ifdef HAVE_USART_CONSOLE
  struct lpc54_dev_s *priv = (struct lpc54_dev_s *)CONSOLE_DEV.priv;
  uint32_t intset;

  lpc54_fifoint_disableall(priv, &intset);

  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      arm_lowputc('\r');
    }

  arm_lowputc(ch);
  lpc54_fifoint_enable(priv, intset);
#endif

  return ch;
}

int up_putc(int ch)
{
#ifdef HAVE_USART_CONSOLE
  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      arm_lowputc('\r');
    }

  arm_lowputc(ch);
  return ch;
}
